--- a/DRAGProj/templates/DRAG/header.html
+++ b/DRAGProj/templates/DRAG/header.html
@@ -1,5 +1,57 @@
-{% extends 'DRAG/index.html' %}
-
 {% block content %}
-    <p>Hello World</p>
+    <section id="menu">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+          <a class="navbar-brand" href="#">DRAG</a>
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="#background">Background</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#diversify">Diversify Now</a>
+            </li>
+          </ul>
+      </nav>
+    </section>
+
+    <section id="header">
+      <div id="main-carousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+          <li data-target="#main-carousel" data-slide-to="0" class="active"></li>
+          <li data-target="#main-carousel" data-slide-to="1"></li>
+          <li data-target="#main-carousel" data-slide-to="2"></li>
+        </ol>
+
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="/DRAGProj/resources/slide1.jpg" alt="Lorem ipsum dolor si amet">
+            <div class="carousel-caption">
+              Lorem ipsum dolor si amet
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="/DRAGProj/resources/slide2.jpg" alt="Lorem ipsum dolor si amet">
+            <div class="carousel-caption">
+              Lorem ipsum dolor si amet
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="/DRAGProj/resources/slide3.jpg" alt="Lorem ipsum dolor si amet">
+            <div class="carousel-caption">
+              Lorem ipsum dolor si amet
+            </div>
+          </div>
+        </div>
+
+        <a class="carousel-control-prev" href="#main-carousel" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+
+        <a class="carousel-control-next" href="#main-carousel" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </section>
 {% endblock %}
