--- a/DRAGProj/templates/DRAG/header.html
+++ b/DRAGProj/templates/DRAG/header.html
@@ -1,18 +1,4 @@
 {% block content %}
-    <section id="menu">
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-          <a class="navbar-brand" href="#">DRAG</a>
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="#background">Background</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#diversify">Diversify Now</a>
-            </li>
-          </ul>
-      </nav>
-    </section>
-
     <section id="header">
       <div id="main-carousel" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
@@ -24,19 +10,20 @@
 
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/DRAGProj/resources/slide1.jpg" alt="Lorem ipsum dolor si amet">
+              {% load static %}
+            <img src="{% static "slide1.jpg" %}" alt="Lorem ipsum dolor si amet">
             <div class="carousel-caption">
               Lorem ipsum dolor si amet
             </div>
           </div>
           <div class="carousel-item">
-            <img src="/DRAGProj/resources/slide2.jpg" alt="Lorem ipsum dolor si amet">
+            <img src="{% static "slide2.jpg" %}" alt="Lorem ipsum dolor si amet">
             <div class="carousel-caption">
               Lorem ipsum dolor si amet
             </div>
           </div>
           <div class="carousel-item">
-            <img src="/DRAGProj/resources/slide3.jpg" alt="Lorem ipsum dolor si amet">
+            <img src="{% static "slide3.jpg" %}" alt="Lorem ipsum dolor si amet">
             <div class="carousel-caption">
               Lorem ipsum dolor si amet
             </div>
