Added context dictionary to allow midfication of data between business layer and views. Style changes, form setup for user input. Need to figure out how to access submitted form data

--- a/DRAG/static/styles/styles.css
+++ b/DRAG/static/styles/styles.css
@@ -27,12 +27,9 @@
 
 #diversify {
     background-color: #e6e6e6;
+	padding-bottom: 60px;
 }
 
 #diversify h2 {
     padding: 30px;
-}
-
-#diversify button {
-    margin-bottom: 60px;
 }
