--- a/DRAGProj/templates/DRAG/index.html
+++ b/DRAGProj/templates/DRAG/index.html
@@ -4,12 +4,7 @@
     <meta charset="UTF-8">
     <title>DRAG - Diversification Rhythm Algorithm Genetics</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
-          integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-    {% load static %}
-    <link rel="stylesheet" href="{% static "styles/styles.css" %}" type="text/css" />
+    {% block resources %} {% include 'DRAG/renderresources.html' %} {% endblock %}
 </head>
 <body>
     <div>
