--- a/DRAGProj/templates/DRAG/indexbody.html
+++ b/DRAGProj/templates/DRAG/indexbody.html
@@ -13,7 +13,7 @@
     <div class="container-fluid text-center">
         <section id="diversify">
             <h2>Rhythm Diversifier</h2>
-            <button type="button" class="btn btn-lg btn-outline-dark">Diversify Now</button>
+            <a class="btn btn-lg btn-outline-dark" href="/Diversify">Diversify Now</a>
         </section>
     </div>
 {% endblock %}
