Setup django form with select and bpm to process data. Templating is used to inject data into the html files and then if the request is valid the user can be sent elsewhere.

--- a/DRAG/static/styles/styles.css
+++ b/DRAG/static/styles/styles.css
@@ -25,7 +25,15 @@
 	margin-top: 2rem;
 }
 
-#diversify {
+#customtrack {
+    margin-bottom: 20px;
+}
+
+#preset {
+	padding: 20px;
+}
+
+#diversify, #preset {
     background-color: #e6e6e6;
 	padding-bottom: 60px;
 }
