--- a/DRAGProj/templates/DRAG/menu.html
+++ b/DRAGProj/templates/DRAG/menu.html
@@ -1,4 +1,5 @@
-<section id="menu">
+{% if is_home %}
+    <section id="menu">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
           <a class="navbar-brand" href="#">DRAG</a>
           <ul class="navbar-nav">
@@ -10,4 +11,17 @@
             </li>
           </ul>
       </nav>
-</section>
+    </section>
+{% endif %}
+{% if is_home == False %}
+    <section id="menu">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+          <a class="navbar-brand" href="#">DRAG</a>
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="/">Home</a>
+            </li>
+          </ul>
+      </nav>
+    </section>
+{% endif %}
