--- a/DRAG/static/styles/styles.css
+++ b/DRAG/static/styles/styles.css
@@ -41,3 +41,12 @@
 #diversify h2 {
     padding: 30px;
 }
+
+form .cb {
+    margin-bottom: 10px;
+}
+
+form .form-element {
+	padding-top: 20px;
+    padding-bottom: 20px;
+}
