--- a/DRAGProj/templates/DRAG/fitness.html
+++ b/DRAGProj/templates/DRAG/fitness.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>DRAG - Rate Fitness</title>
+    {% block resources %} {% include "DRAG/renderresources.html" %} {% endblock %}
 </head>
 <body>
     <p>
@@ -10,5 +11,12 @@
         {{ genre }} <br>
         {{ input }} <br>
     </p>
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+                integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"
+                integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"
+                integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 </body>
 </html>
