Setting up fitness with trAack playing. Css for it, form py, js file for templates need to fix js bug. Changes to static resources and temporary disable of actual wav writing, should be mthreaded as too slow.

--- a/DRAG/static/styles/styles.css
+++ b/DRAG/static/styles/styles.css
@@ -38,6 +38,14 @@
 	padding-bottom: 60px;
 }
 
+#fitnessform {
+    padding: 20px;
+}
+
+#fitnessform #fitnesssubmit {
+    margin-top: 20px;
+}
+
 #diversify h2 {
     padding: 30px;
 }
