Changed to number fields with validation over sliders. Sliders are the devils spawn when it comes to django dynamic html. Changed some styles. Found a way to dynamically generate form fields on form construction based on population, thus allowing multiple fitness fields of the same type to collect data for me. Hurray!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!

--- a/DRAG/static/styles/styles.css
+++ b/DRAG/static/styles/styles.css
@@ -46,6 +46,11 @@
     margin-top: 20px;
 }
 
+#fitnessform .fitness {
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+
 #diversify h2 {
     padding: 30px;
 }
