Added smooth scroll to templates js. Updated styles for new error page. Data context now has a handle on generations and they are displayed as the user progresses. Viewshelper created to try and refactor some general logic out of views. New template for body scripts, e.g. jquery. Bug fixes to the GA itself e.g. sorting of Crossover problem. Url routing configured for eventual Neural Network page.

--- a/DRAG/static/styles/styles.css
+++ b/DRAG/static/styles/styles.css
@@ -63,3 +63,10 @@ form .form-element {
 	padding-top: 20px;
     padding-bottom: 20px;
 }
+
+.error {
+    background-color: #e6e6e6;
+    border-radius: 5px;
+	margin-top: 20px;
+    padding: 20px;
+}
