--- a/DRAGProj/templates/DRAG/fitnessform.html
+++ b/DRAGProj/templates/DRAG/fitnessform.html
@@ -2,7 +2,7 @@
     {% load static %}
     {% load strconcat %}
     <section id="fitnessform">
-        <h1>Track Rating</h1>
+        <h1>Track Rating for Generation {{ currentgeneration }}</h1>
         <p>As in biological evolution only the fittest candidates survive! Listen to tracks
         and assign them a quality rating between 0 and 10. Click submit when you are finished.</p>
         <form action="/RateFitness/" method="post">
@@ -22,5 +22,4 @@
             <input type="submit" value="Submit" class="btn btn-primary" id="fitnesssubmit">
         </form>
     </section>
-    <script src="{% static "js/templates.js" %}"></script>
 {% endblock %}
