--- a/DRAGProj/templates/DRAG/menu.html
+++ b/DRAGProj/templates/DRAG/menu.html
@@ -4,10 +4,10 @@
           <a class="navbar-brand" href="#">DRAG</a>
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="#background">Background</a>
+              <a class="nav-link smooth" href="#background">Background</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#diversify">Diversify Now</a>
+              <a class="nav-link smooth" href="#diversify">Diversify Now</a>
             </li>
           </ul>
       </nav>
