Preset form with defined presets in context setup. Urls and views setup to cater to this. Error page is displayed if the preset page is called directly with GET.

--- a/DRAGProj/templates/DRAG/error.html
+++ b/DRAGProj/templates/DRAG/error.html
@@ -14,8 +14,8 @@
                 <div class="col-md-4 offset-md-4 error">
                     <h1>DRAG Error</h1>
                     <p>
-                        Something went wrong - fill in details. Go <a href="/Diversify/">here</a> to diversify a track,
-                        or go <a href="/">home</a>.
+                        Something went wrong, did you provide correct input? Go <a href="/Diversify/">here</a> to
+                        diversify a track, or go <a href="/">home</a>.
                     </p>
                 </div>
             </div>
