--- a/DRAGProj/templates/DRAG/startdiversify.html
+++ b/DRAGProj/templates/DRAG/startdiversify.html
@@ -11,6 +11,7 @@
             {% include 'DRAG/menu.html' %}
             <div class="container">
                 {% include 'DRAG/geneticform.html' %}
+                {% include 'DRAG/presetform.html' %}
             </div>
         {% endblock %}
         {% block bodyscripts %}
