Got numeric keybinds working for playing tracks. Need some other navigation for values over 9. Footer added to pages with styles. Cleaned up some unecessary code and files. Changed some html in files. Wrote multipoint crossover for the crossover module. Might want to try something novel here as well.

--- a/DRAG/static/styles/styles.css
+++ b/DRAG/static/styles/styles.css
@@ -55,6 +55,12 @@
     padding: 30px;
 }
 
+#footer {
+	color: white;
+	background-color: #343a40;
+	padding: 40px;
+}
+
 form .cb {
     margin-bottom: 10px;
 }
