--- a/DRAGProj/templates/DRAG/fitness.html
+++ b/DRAGProj/templates/DRAG/fitness.html
@@ -12,6 +12,7 @@
         <div class="container-fluid">
             {% include "DRAG/fitnessform.html" %}
         </div>
+        {% include 'DRAG/footer.html' %}
     {% endblock %}
     {% block bodyscripts %}
         {% include "DRAG/bodyscripts.html" %}
