--- a/DRAGProj/templates/DRAG/index.html
+++ b/DRAGProj/templates/DRAG/index.html
@@ -12,6 +12,7 @@
             {% include 'DRAG/menu.html' %}
             {% include 'DRAG/header.html' %}
             {% include 'DRAG/indexbody.html' %}
+            {% include 'DRAG/footer.html' %}
         {% endblock %}
     </div>
     {% block bodyscripts %}
