--- a/DRAGProj/templates/DRAG/indexbody.html
+++ b/DRAGProj/templates/DRAG/indexbody.html
@@ -8,6 +8,14 @@
               a drum track either constructed by the user or from a
               selection of presets.
             </p>
+            <p>
+              When the user has rated a number of generations, a machine
+              learning algorithm runs to learn how the user has rated and
+              automate generations.
+
+              Single tracks can be downloaded at any time, and can be played
+              easily with keybindings to ease the rating process.
+            </p>
         </section>
     </div>
     <div class="container-fluid text-center">
