--- a/DRAGProj/templates/DRAG/startdiversify.html
+++ b/DRAGProj/templates/DRAG/startdiversify.html
@@ -13,6 +13,7 @@
                 {% include 'DRAG/geneticform.html' %}
                 {% include 'DRAG/presetform.html' %}
             </div>
+            {% include 'DRAG/footer.html' %}
         {% endblock %}
         {% block bodyscripts %}
             {% include "DRAG/bodyscripts.html" %}
