--- a/DRAGProj/templates/DRAG/bodyscripts.html
+++ b/DRAGProj/templates/DRAG/bodyscripts.html
@@ -6,5 +6,7 @@
                 integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"
                 integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/mousetrap/1.6.1/mousetrap.min.js"></script>
         <script src="{% static "js/templates.js" %}"></script>
+        <script src="{% static "js/mousetrap-bind-dictionary.min.js" %}"></script>
 {% endblock %}
