--- a/DRAGProj/templates/DRAG/fitnessform.html
+++ b/DRAGProj/templates/DRAG/fitnessform.html
@@ -4,14 +4,16 @@
     <section id="fitnessform">
         <h1>Track Rating for Generation {{ currentgeneration }}</h1>
         <p>As in biological evolution only the fittest candidates survive! Listen to tracks
-        and assign them a quality rating between 0 and 10. Click submit when you are finished.</p>
+        and assign them a quality rating between 0 and 10. Click submit when you are finished. You may
+        listen to the first 9 tracks with numeric key shortcuts (pressing 1 will play track 1). You
+        can also use the tab key to switch between fitness inputs fast.</p>
         <form action="/RateFitness/" method="post">
             {% csrf_token %}
             <div class="row">
                 {% for field in fitnessform %}
                     <div class="col-md-3">
                         <h5>Track {{ forloop.counter }}:</h5>
-                        <audio controls>
+                        <audio id="{{ "track"|strconcat:forloop.counter0 }}" class="track" controls>
                             <source src="{{ "/DRAG/static/wavfiles/"|strconcat:"candidate"|strconcat:forloop.counter0|strconcat:".wav" }}" type="audio/wav">
                         </audio>
                         <label for="fitness">Enter 0-10: </label>
