--- a/DRAGProj/templates/DRAG/header.html
+++ b/DRAGProj/templates/DRAG/header.html
@@ -13,19 +13,19 @@
               {% load static %}
             <img src="{% static "slide1.jpg" %}" alt="Lorem ipsum dolor si amet">
             <div class="carousel-caption">
-              Lorem ipsum dolor si amet
+              Generate rhythm tracks with a Genetic Algorithm!
             </div>
           </div>
           <div class="carousel-item">
             <img src="{% static "slide2.jpg" %}" alt="Lorem ipsum dolor si amet">
             <div class="carousel-caption">
-              Lorem ipsum dolor si amet
+              Machine Learning learns how you rate tracks!
             </div>
           </div>
           <div class="carousel-item">
             <img src="{% static "slide3.jpg" %}" alt="Lorem ipsum dolor si amet">
             <div class="carousel-caption">
-              Lorem ipsum dolor si amet
+              Presets can be used to speed up the process
             </div>
           </div>
         </div>
