--- a/DRAGProj/templates/DRAG/menu.html
+++ b/DRAGProj/templates/DRAG/menu.html
@@ -9,6 +9,9 @@
             <li class="nav-item">
               <a class="nav-link smooth" href="#diversify">Diversify Now</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link smooth" href="#footer">Footer</a>
+            </li>
           </ul>
       </nav>
     </section>
@@ -20,6 +23,9 @@
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link" href="/">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link smooth" href="#footer">Footer</a>
             </li>
           </ul>
       </nav>
