--- a/DRAGProj/templates/DRAG/renderresources.html
+++ b/DRAGProj/templates/DRAG/renderresources.html
@@ -5,4 +5,5 @@
           integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     {% load static %}
     <link rel="stylesheet" href="{% static "styles/styles.css" %}" type="text/css" />
+    <link rel="shortcut icon" href="{%  static "favicon.ico" %}">
 {% endblock %}
