Written JS Keybind grid for when user rates tracks. User can easily navigate the tracks like a grid using Shift + a direction key. Trying to move off the grid wraps either to the first track or the next line if going horizontally. When a track has focus it can be played with enter or space.

--- a/DRAGProj/templates/DRAG/fitness.html
+++ b/DRAGProj/templates/DRAG/fitness.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    {% load static %}
     <meta charset="UTF-8">
     <title>DRAG - Rate Fitness</title>
     {% block resources %} {% include "DRAG/renderresources.html" %} {% endblock %}
@@ -17,5 +18,6 @@
     {% block bodyscripts %}
         {% include "DRAG/bodyscripts.html" %}
     {% endblock %}
+    <script src="{% static "js/keybindings.js" %}"></script>
 </body>
 </html>
