Written JS Keybind grid for when user rates tracks. User can easily navigate the tracks like a grid using Shift + a direction key. Trying to move off the grid wraps either to the first track or the next line if going horizontally. When a track has focus it can be played with enter or space.

--- a/DRAGProj/templates/DRAG/fitnessform.html
+++ b/DRAGProj/templates/DRAG/fitnessform.html
@@ -6,7 +6,10 @@
         <p>As in biological evolution only the fittest candidates survive! Listen to tracks
         and assign them a quality rating between 0 and 10. Click submit when you are finished. You may
         listen to the first 9 tracks with numeric key shortcuts (pressing 1 will play track 1). You
-        can also use the tab key to switch between fitness inputs fast.</p>
+        can also use the tab key to switch between fitness inputs fast.
+
+        Each track can be navigated easily in a grid system by using shift + a directional key to switch
+        from track to track. Once a track is in focus you may use the Enter or Space key to play the track.</p>
         <form action="/RateFitness/" method="post">
             {% csrf_token %}
             <div class="row">
