--- a/DRAGProj/templates/DRAG/geneticform.html
+++ b/DRAGProj/templates/DRAG/geneticform.html
@@ -1,6 +1,7 @@
 {% block content %}
     <h1>Getting Started</h1>
-    <p> Provide an input track to the genetic algorithm using one of the two options below.</p>
+    <p> Provide an input track to the genetic algorithm using one of the two options below. Also enter a BPM
+    value between 0 and 250 for the speed of the tracks.</p>
     <section id="customtrack">
         <h2>Make a custom track...</h2>
         <p>To make a custom track, choose an instrument for each single 4/4 beat in <b>two bars</b> (eight notes)</p>
