--- a/DRAGProj/templates/DRAG/presetform.html
+++ b/DRAGProj/templates/DRAG/presetform.html
@@ -3,12 +3,12 @@
         <h2>Or use a preset</h2>
         <form action="/Preset/" method="post">
             {% csrf_token %}
-            {{ presetform.preset }}
+            {{ preset_form.preset }}
             <div class="form-element">
                 <label for="bpmtwo">Enter a BPM: </label>
-                {{ presetform.bpm }}
+                {{ preset_form.bpm }}
             </div>
             <input type="submit" value="Confirm Input" class="btn btn-primary"/>
-        </section>
-    </form>
+        </form>
+    </section>
 {% endblock %}
