--- a/DRAGProj/templates/DRAG/fitnessform.html
+++ b/DRAGProj/templates/DRAG/fitnessform.html
@@ -21,7 +21,7 @@
                                 <h5>Track {{ forloop.counter }}:</h5>
                                 <audio id="{{ "track"|str_concat:counter }}" class="track" controls>
 
-                                    <source src="{{ "/DRAG/static/wavfiles/"|str_concat:"candidate"|str_concat:counter|str_concat:".wav" }}"
+                                    <source src="{{ "/DRAG/static/wavfiles/"|str_concat:request.session.user_id|str_concat:"candidate"|str_concat:counter|str_concat:".wav" }}"
                                             type="audio/wav">
 
                                 </audio>
