Nice looking design changes. Added about page and some images, they say a lot of words apparently.

--- a/DRAG/static/styles/styles.css
+++ b/DRAG/static/styles/styles.css
@@ -55,8 +55,18 @@
 	margin-bottom: 10px;
 }
 
+#diversify {
+    background-image: url("/DRAG/static/images/code.jpg")
+}
+
 #diversify h2 {
     padding: 30px;
+    color: white;
+}
+
+#about .about-section {
+	margin-bottom: 20px;
+	margin-top: 20px;
 }
 
 #footer {
