--- a/DRAGProj/templates/DRAG/indexbody.html
+++ b/DRAGProj/templates/DRAG/indexbody.html
@@ -3,25 +3,28 @@
         <section id="background">
             <h1>DRAG - Diversification Rhythm Algorithm Genetics</h1>
             <p>
-              DRAG is both the name of a rudiment and this platform.
-              DRAG uses an Interactive Genetic Algorithm to diversify
-              a drum track either constructed by the user or from a
-              selection of presets.
+                DRAG is both the name of a rudiment and this platform.
+                DRAG uses an Interactive Genetic Algorithm to diversify
+                a drum track either constructed by the user or from a
+                selection of presets.
             </p>
             <p>
-              When the user has rated a number of generations, a machine
-              learning algorithm runs to learn how the user has rated and
-              automate generations.
+                When the user has rated a number of generations, a machine
+                learning algorithm runs to learn how the user has rated and
+                automate generations.
 
-              Single tracks can be downloaded at any time, and can be played
-              easily with keybindings to ease the rating process.
+                Single tracks can be downloaded at any time, and can be played
+                easily with keybindings to ease the rating process.
             </p>
+            <div class="row">
+                <img src="/DRAG/static/images/dna.jpg" style="border-radius: 50px; margin: auto;">
+            </div>
         </section>
     </div>
     <div class="container-fluid text-center">
         <section id="diversify">
             <h2>Rhythm Diversifier</h2>
-            <a class="btn btn-lg btn-outline-dark" href="/Diversify">Diversify Now</a>
+            <a class="btn btn-lg btn-outline-light" href="/Diversify">Diversify Now</a>
         </section>
     </div>
 {% endblock %}
