--- a/DRAGProj/templates/DRAG/menu.html
+++ b/DRAGProj/templates/DRAG/menu.html
@@ -1,33 +1,39 @@
 {% if is_home %}
     <section id="menu">
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-          <a class="navbar-brand" href="#">DRAG</a>
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link smooth" href="#background">Background</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link smooth" href="#diversify">Diversify Now</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link smooth" href="#footer">Footer</a>
-            </li>
-          </ul>
-      </nav>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand" href="#">DRAG</a>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link smooth" href="#background">Background</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link smooth" href="#diversify">Diversify Now</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link smooth" href="#footer">Footer</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link smooth" href="/About">About</a>
+                </li>
+            </ul>
+        </nav>
     </section>
 {% endif %}
 {% if is_home == False %}
     <section id="menu">
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-          <a class="navbar-brand" href="#">DRAG</a>
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="/">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link smooth" href="#footer">Footer</a>
-            </li>
-          </ul>
-      </nav>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand" href="#">DRAG</a>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="/">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link smooth" href="#footer">Footer</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link smooth" href="/About">About</a>
+                </li>
+            </ul>
+        </nav>
     </section>
 {% endif %}
