Style changes, scroller added. Added animate css library and a first nice animation on the home page.

--- a/DRAGProj/templates/DRAG/404.html
+++ b/DRAGProj/templates/DRAG/404.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         {% block content %}
+            {% include 'DRAG/scroller.html' %}
             {% include "DRAG/menu.html" %}
         {% endblock %}
         <div class="container-fluid">
