--- a/DRAGProj/templates/DRAG/fitness.html
+++ b/DRAGProj/templates/DRAG/fitness.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     {% block content %}
+        {% include 'DRAG/scroller.html' %}
         {% include "DRAG/menu.html" %}
         <div class="container-fluid">
             {% include "DRAG/fitnessform.html" %}
