--- a/DRAGProj/templates/DRAG/header.html
+++ b/DRAGProj/templates/DRAG/header.html
@@ -1,5 +1,5 @@
 {% block content %}
-    <section id="header">
+    <section id="header" class="bounceInUp animated">
       <div id="main-carousel" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
         <ol class="carousel-indicators">
