--- a/DRAGProj/templates/DRAG/index.html
+++ b/DRAGProj/templates/DRAG/index.html
@@ -9,6 +9,7 @@
 <body>
     <div>
         {% block content %}
+            {% include 'DRAG/scroller.html' %}
             {% include 'DRAG/menu.html' %}
             {% include 'DRAG/header.html' %}
             {% include 'DRAG/indexbody.html' %}
