--- a/DRAG/static/styles/styles.css
+++ b/DRAG/static/styles/styles.css
@@ -90,3 +90,25 @@ form .form-element {
 	margin-top: 20px;
     padding: 20px;
 }
+
+#scroller {
+	display: none;
+	border-left: 5px solid #343a40;
+    border-top: 5px solid #343a40;
+    border-bottom: 5px solid #343a40;
+    box-shadow: 5px 2px 10px black;
+    background-color: white;
+	position: fixed;
+	right: 0;
+	bottom: 300px;
+	width: 50px;
+	height: 100px;
+	text-align: center;
+	border-radius: 20px 0 0 20px;
+}
+
+#scroller img {
+	margin-top: 50%;
+	min-width: 50%;
+    min-height: 40%;
+}
