--- a/DRAGProj/templates/DRAG/500.html
+++ b/DRAGProj/templates/DRAG/500.html
@@ -7,6 +7,7 @@
     <body>
         {% block content %}
             {% include "DRAG/menu.html" %}
+            {% include 'DRAG/scroller.html' %}
         {% endblock %}
         <div class="container-fluid">
             <div class="row">
