--- a/DRAGProj/templates/DRAG/indexbody.html
+++ b/DRAGProj/templates/DRAG/indexbody.html
@@ -17,7 +17,10 @@
                 easily with keybindings to ease the rating process.
             </p>
             <div class="row">
-                <img src="/DRAG/static/images/dna.jpg" style="border-radius: 50px; margin: auto;">
+                <div class="col-md-12">
+                    <img src="/DRAG/static/images/dna.jpg" style="border-radius: 50px; margin: auto;"
+                         alt="A picture of dna">
+                </div>
             </div>
         </section>
     </div>
