--- a/DRAGProj/templates/DRAG/startdiversify.html
+++ b/DRAGProj/templates/DRAG/startdiversify.html
@@ -8,6 +8,7 @@
     </head>
     <body>
         {% block content %}
+            {% include 'DRAG/scroller.html' %}
             {% include 'DRAG/menu.html' %}
             <div class="container">
                 {% include 'DRAG/geneticform.html' %}
