More ML classification attempts, at 61% max. Also website design changes, mobile menu added at particular screen sizes.

--- a/DRAGProj/templates/DRAG/menu.html
+++ b/DRAGProj/templates/DRAG/menu.html
@@ -2,20 +2,25 @@
     <section id="menu">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="#">DRAG</a>
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link smooth" href="#background">Background</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link smooth" href="#diversify">Diversify Now</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link smooth" href="#footer">Footer</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link smooth" href="/About">About</a>
-                </li>
-            </ul>
+            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#drag-nav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="drag-nav">
+                <ul class="nav navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link smooth" href="#background">Background</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link smooth" href="#diversify">Diversify Now</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link smooth" href="#footer">Footer</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link smooth" href="/About">About</a>
+                    </li>
+                </ul>
+            </div>
         </nav>
     </section>
 {% endif %}
@@ -23,17 +28,22 @@
     <section id="menu">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="#">DRAG</a>
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="/">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link smooth" href="#footer">Footer</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link smooth" href="/About">About</a>
-                </li>
-            </ul>
+            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#drag-nav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="drag-nav">
+                <ul class="nav navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link smooth" href="#footer">Footer</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link smooth" href="/About">About</a>
+                    </li>
+                </ul>
+            </div>
         </nav>
     </section>
 {% endif %}
