Fully mobile scalable now, looking clean.

--- a/DRAGProj/templates/DRAG/about.html
+++ b/DRAGProj/templates/DRAG/about.html
@@ -43,7 +43,7 @@
             </p>
             <div class="row about-section">
                 <div class="col-md-12">
-                    <img src="/DRAG/static/images/electric-kit.jpg" style="margin: auto; border-radius: 12px;"
+                    <img class="img-fluid" src="/DRAG/static/images/electric-kit.jpg" style="margin: auto; border-radius: 12px;"
                          alt="An electronic drum kit.">
                 </div>
             </div>
