--- a/DRAGProj/templates/DRAG/startdiversify.html
+++ b/DRAGProj/templates/DRAG/startdiversify.html
@@ -10,7 +10,7 @@
         {% block content %}
             {% include 'DRAG/scroller.html' %}
             {% include 'DRAG/menu.html' %}
-            <div class="container">
+            <div id="forms-diversify" class="container">
                 {% include 'DRAG/geneticform.html' %}
                 {% include 'DRAG/presetform.html' %}
             </div>
