--- a/DRAG/static/styles/styles.css
+++ b/DRAG/static/styles/styles.css
@@ -3,16 +3,16 @@
 */
 
 #header .carousel-inner img {
-	width: 100%;
-	margin: auto;
+    width: 100%;
+    margin: auto;
 }
 
 #header .carousel-inner {
-	font-size: 24px;
+    font-size: 24px;
 }
 
 .container {
-	padding: 80px 120px;
+    padding: 80px 120px;
 }
 
 .container-fluid {
@@ -21,12 +21,12 @@
 }
 
 #background h1 {
-	font-size: 2rem;
+    font-size: 2rem;
 }
 
 #background p {
-	margin-bottom: 2rem;
-	margin-top: 2rem;
+    margin-bottom: 2rem;
+    margin-top: 2rem;
 }
 
 #customtrack {
@@ -34,12 +34,12 @@
 }
 
 #preset {
-	padding: 20px;
+    padding: 20px;
 }
 
 #diversify, #preset {
     background-color: #e6e6e6;
-	padding-bottom: 60px;
+    padding-bottom: 60px;
 }
 
 #fitnessform {
@@ -51,8 +51,8 @@
 }
 
 #fitnessform .fitness {
-	margin-top: 10px;
-	margin-bottom: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 #diversify {
@@ -65,14 +65,14 @@
 }
 
 #about .about-section {
-	margin-bottom: 20px;
-	margin-top: 20px;
+    margin-bottom: 20px;
+    margin-top: 20px;
 }
 
 #footer {
-	color: white;
-	background-color: #343a40;
-	padding: 40px;
+    color: white;
+    background-color: #343a40;
+    padding: 40px;
 }
 
 form .cb {
@@ -80,37 +80,37 @@ form .cb {
 }
 
 form .form-element {
-	padding-top: 20px;
+    padding-top: 20px;
     padding-bottom: 20px;
 }
 
 .error {
     background-color: #e6e6e6;
     border-radius: 5px;
-	margin-top: 20px;
+    margin-top: 20px;
     padding: 20px;
 }
 
 #scroller {
-	display: none;
-	border-left: 5px solid #343a40;
+    display: none;
+    border-left: 5px solid #343a40;
     border-top: 5px solid #343a40;
     border-bottom: 5px solid #343a40;
     box-shadow: 5px 2px 10px black;
     background-color: white;
-	position: fixed;
-	right: 0;
-	bottom: 300px;
-	width: 50px;
-	height: 100px;
-	text-align: center;
-	border-radius: 20px 0 0 20px;
+    position: fixed;
+    right: 0;
+    bottom: 300px;
+    width: 50px;
+    height: 100px;
+    text-align: center;
+    border-radius: 20px 0 0 20px;
     z-index: 100;
 }
 
 #scroller img {
-	margin-top: 50%;
-	min-width: 50%;
+    margin-top: 50%;
+    min-width: 50%;
     min-height: 40%;
 }
 
@@ -122,4 +122,19 @@ form .form-element {
 .form-control:focus {
     border: none;
     box-shadow: none;
+}
+
+@media only screen and (max-width: 800px) {
+    .about-section img {
+        margin-bottom: 20px;
+    }
+
+    #forms-diversify, #index-body, #about {
+        padding: 20px;
+    }
+
+    #header .carousel-inner img {
+        width: auto;
+    }
+
 }
