--- a/DRAGProj/templates/DRAG/indexbody.html
+++ b/DRAGProj/templates/DRAG/indexbody.html
@@ -1,5 +1,5 @@
 {% block content %}
-    <div class="container text-center">
+    <div id="index-body" class="container text-center">
         <section id="background">
             <h1>DRAG - Diversification Rhythm Algorithm Genetics</h1>
             <p>
@@ -18,7 +18,7 @@
             </p>
             <div class="row">
                 <div class="col-md-12">
-                    <img src="/DRAG/static/images/dna.jpg" style="border-radius: 50px; margin: auto;"
+                    <img class="img-fluid" src="/DRAG/static/images/dna.jpg" style="border-radius: 50px; margin: auto;"
                          alt="A picture of dna">
                 </div>
             </div>
