Added a load of documentation and a couple of todos. Fixed formatting issues, added package imports and moved static resources around a little.

--- a/DRAG/static/styles/styles.css
+++ b/DRAG/static/styles/styles.css
@@ -136,5 +136,10 @@ form .form-element {
     #header .carousel-inner img {
         width: auto;
     }
+}
 
+@media only screen and (min-width: 800px) {
+    .navbar-expand-lg .navbar-nav .nav-link {
+        padding-right: 1.5rem;
+    }
 }
