--- a/DRAGProj/templates/DRAG/header.html
+++ b/DRAGProj/templates/DRAG/header.html
@@ -11,19 +11,19 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
               {% load static %}
-            <img src="{% static "slide1.jpg" %}" alt="Generate rhythm tracks with a Genetic Algorithm!">
+            <img src="{% static "images/slide1.jpg" %}" alt="Generate rhythm tracks with a Genetic Algorithm!">
             <div class="carousel-caption">
               Generate rhythm tracks with a Genetic Algorithm!
             </div>
           </div>
           <div class="carousel-item">
-            <img src="{% static "slide2.jpg" %}" alt="Machine Learning learns how you rate tracks!">
+            <img src="{% static "images/slide2.jpg" %}" alt="Machine Learning learns how you rate tracks!">
             <div class="carousel-caption">
               Machine Learning learns how you rate tracks!
             </div>
           </div>
           <div class="carousel-item">
-            <img src="{% static "slide3.jpg" %}" alt="Presets can be used to speed up the process">
+            <img src="{% static "images/slide3.jpg" %}" alt="Presets can be used to speed up the process">
             <div class="carousel-caption">
               Presets can be used to speed up the process
             </div>
