--- a/DRAGProj/templates/DRAG/menu.html
+++ b/DRAGProj/templates/DRAG/menu.html
@@ -1,7 +1,7 @@
 {% if is_home %}
     <section id="menu">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">DRAG</a>
+            <a class="navbar-brand" href="/">DRAG</a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#drag-nav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -27,7 +27,7 @@
 {% if is_home == False %}
     <section id="menu">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">DRAG</a>
+            <a class="navbar-brand" href="/">DRAG</a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#drag-nav">
                 <span class="navbar-toggler-icon"></span>
             </button>
