--- a/DRAGProj/templates/DRAG/menu.html
+++ b/DRAGProj/templates/DRAG/menu.html
@@ -19,6 +19,9 @@
                     <li class="nav-item">
                         <a class="nav-link smooth" href="/About">About</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link smooth" href="/FAQ">FAQ</a>
+                    </li>
                 </ul>
             </div>
         </nav>
